# myprojectc-

./: CMakeLists.txt  README.txt
FLTK/CMake/: FLTK-Targets-noconfig.cmake  FLTK-Targets.cmake  UseFLTK.cmake
FLTK/include/FL/: Enumerations.H  Fl.H  Fl_Device.H  fl_draw.H  win32.H
fltk/: INSTALL_RECEIPT.json  sbom.spdx.json
fltk/.brew/: fltk.rb
src/: board.cpp  board.h  cell.h  game.cpp  game.h  game_logic.cpp  game_logic.h  main.cpp  piece.cpp  piece.h
